
cmake_minimum_required(VERSION 3.24)

project(advent_of_code_2022)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS_DEBUG)

add_executable(day_1 day_1.cpp)
add_executable(day_2 day_2.cpp)
add_executable(day_3 day_3.cpp)
add_executable(day_4 day_4.cpp)
add_executable(day_5 day_5.cpp)
add_executable(day_6 day_6.cpp)
